Fix background images with !important CSS rules and improve footer alignment

--- a/client/src/components/Favourites/Favourites.css
+++ b/client/src/components/Favourites/Favourites.css
@@ -44,8 +44,9 @@
     max-width: 100vw;
     margin: 0 auto;
     min-height: 100vh;
-    background: url('/images/fav_background.jpg') center/cover no-repeat;
-    background-attachment: fixed;
+    background: url('/images/fav_background.jpg') center center / cover no-repeat !important;
+    background-attachment: fixed !important;
+    background-color: #f5f5f5 !important;
 }
 
 .favourites-title {
