--- a/client/src/components/Game/Game.css
+++ b/client/src/components/Game/Game.css
@@ -15,8 +15,9 @@
     min-height: 873px;
     /* Ensure it has a minimum height */
     margin: 40px auto;
-    background: url('/images/game_background.jpg') no-repeat center center;
-    background-size: cover;
+    background: url('/images/game_background.jpg') no-repeat center center !important;
+    background-size: cover !important;
+    background-color: #f5f5f5 !important;
     border: 4px solid #cc0000;
     /* Thicker red border */
     border-radius: 20px;
